@@ -1,3 +1,12 @@
+Sun Apr 24 09:33:27 UTC 2011  Sumant Tambe  <sutambe@nospam>
+
+        * tests/library-xsd/driver.cxx:
+        * tests/library-xsd/library-10.0.vcxproj:
+        * tests/library-xsd/Makefile:
+		
+		Added an example that shows depth-first visitor traversal from root.
+		Uses "Identity".
+
 Sun Apr 24 00:13:25 UTC 2011  Sumant Tambe  <sutambe@nospam>
 
         * tests/library-xsd/Makefile:
